# domify

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
src/: __init__.py  html_attribute.py  html_block.py  html_page.py  html_raw_text.py  html_renderable.py  html_text.py  standard_imports.py
src/pydomify/: __init__.py  html_attr.py  html_attribute.py  html_block.py  html_element.py  html_page.py  html_raw_text.py  html_renderable.py  html_tag.py  html_text.py
test/: test_html_tag.py
